[gd_scene load_steps=10 format=2]

[ext_resource path="res://menu/themes/maintheme.tres" type="Theme" id=1]
[ext_resource path="res://menu/startmenu/buttonshader.tres" type="Shader" id=2]
[ext_resource path="res://menu/startmenu/startmenu.gd" type="Script" id=3]
[ext_resource path="res://fonts/alagard.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://player/forsenE.png" type="Texture" id=5]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

vec3 hsv2rgb(vec3 c) {
  vec4 K = vec4(1.0, 2.0 / 3.0, 1.0 / 3.0, 3.0);
  vec3 p = abs(fract(c.xxx + K.xyz) * 6.0 - K.www);
  return c.z * mix(K.xxx, clamp(p - K.xxx, 0.0, 1.0), c.y);
}
void fragment() {
	COLOR = texture(TEXTURE,UV);
	COLOR.rgb = hsv2rgb(vec3(mod(TIME*0.5+UV.x*0.5,1.0),1.0,1.0));
}
void vertex() {
	//VERTEX.x *= (3.0*UV.y+10.0+sin(TIME))/10.0;
	VERTEX.y *= abs(4.0+sin(TIME*5.0))/4.0;
	VERTEX.x += sin(TIME*6.0)*10.0;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
use_mipmaps = true
font_data = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons"]
material = SubResource( 4 )
margin_top = 16.0
margin_right = 128.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 2 )
text = "forsen fan game BatChest"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Buttons"]
material = SubResource( 1 )
margin_top = 53.0
margin_right = 128.0
margin_bottom = 70.0
custom_colors/font_color_focus = Color( 1, 0.372549, 0.372549, 1 )
custom_colors/font_color_hover = Color( 1, 0.372549, 0.372549, 1 )
text = "Continue"

[node name="NewGame" type="Button" parent="Buttons"]
material = SubResource( 1 )
margin_top = 74.0
margin_right = 128.0
margin_bottom = 91.0
custom_colors/font_color_focus = Color( 1, 0.372549, 0.372549, 1 )
custom_colors/font_color_hover = Color( 1, 0.372549, 0.372549, 1 )
text = "New Game"

[node name="Quit" type="Button" parent="Buttons"]
material = SubResource( 1 )
margin_top = 95.0
margin_right = 128.0
margin_bottom = 112.0
custom_colors/font_color_focus = Color( 1, 0.372549, 0.372549, 1 )
custom_colors/font_color_hover = Color( 1, 0.372549, 0.372549, 1 )
text = "Quit"

[connection signal="mouse_entered" from="Buttons/Continue" to="." method="_on_Continue_mouse_entered"]
[connection signal="pressed" from="Buttons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="mouse_entered" from="Buttons/NewGame" to="." method="_on_NewGame_mouse_entered"]
[connection signal="pressed" from="Buttons/NewGame" to="." method="_on_Play_pressed"]
[connection signal="mouse_entered" from="Buttons/Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
